--- a/.github/workflows/nightly-v1.yml
+++ b/.github/workflows/nightly-v1.yml
@@ -1,7 +1,8 @@
 name: Zowe Nightly Pipeline for v1
 on:
   schedule:
-    - cron: '13 5 * * *'
+    # this sets to 6.13am everyday UTC time
+    - cron: '13 6 * * *'
   workflow_dispatch:
     inputs:
       skip-promote:
