--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -111,8 +111,8 @@ jobs:
           build-name: ${{ github.event.inputs.zowe-build-name }}
           build-num: ${{ github.event.inputs.zowe-build-number }}
           release-version: ${{ github.event.inputs.zowe-release-version }}
-        # env:
-        #   DEBUG: 'zowe-release:validate'
+        env:
+          DEBUG: 'zowe-release:validate'
 
       # Above step 'Validate' will generate a file (name is stored in its outputs.PROMOTE_JSON_FILE_NAME_FULL)
       # file name is: promote-artifacts.json
