--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,8 +34,8 @@ env:
   ZOWE_INSTALL_PACKAGING_REPO: zowe-install-packaging
   V1_CORRECT_NUM_OF_RELEASE_ARTIFACTS: 12
   V1_CORRECT_NUM_OF_SIGNED_ARTIFACTS: 26
-  V2_CORRECT_NUM_OF_RELEASE_ARTIFACTS: TODO
-  V2_CORRECT_NUM_OF_SIGNED_ARTIFACTS: TODO
+  V2_CORRECT_NUM_OF_RELEASE_ARTIFACTS: 8
+  V2_CORRECT_NUM_OF_SIGNED_ARTIFACTS: 18
   LOCAL_RELEASE_FOLDER: .release
   TAG_DIR: .tag
   ORIGINAL_STAGING_DIR: .original-zowe-install-packaging-staging
