--- a/.github/workflows/nightly-v1.yml
+++ b/.github/workflows/nightly-v1.yml
@@ -1,8 +1,8 @@
 name: Zowe Nightly Pipeline for v1
 on:
   schedule:
-    # this sets to 6.13am everyday UTC time, 2.13am EST
-    - cron: '13 6 * * *'
+    # this sets to 1.10am everyday UTC time, 9.10pm EST
+    - cron: '10 1 * * *'
   workflow_dispatch:
     inputs:
       skip-promote:
