--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,9 @@ on:
 env:
   ZOWE_INSTALL_PACKAGING_OWNER: zowe
   ZOWE_INSTALL_PACKAGING_REPO: zowe-install-packaging
+  V1_STAGING_BRANCH: v1.x/staging
+  V2_STAGING_BRANCH: v2.x/staging
+  STAGING_BRANCH: default
   V1_CORRECT_NUM_OF_RELEASE_ARTIFACTS: 13
   V1_CORRECT_NUM_OF_SIGNED_ARTIFACTS: 28
   V2_CORRECT_NUM_OF_RELEASE_ARTIFACTS: 9
@@ -84,6 +87,7 @@ jobs:
           echo ZOWE_RELEASE_JSON=zowe-release-v1.json >> $GITHUB_ENV
           echo CORRECT_NUM_OF_RELEASE_ARTIFACTS=${{ env.V1_CORRECT_NUM_OF_RELEASE_ARTIFACTS }} >> $GITHUB_ENV
           echo CORRECT_NUM_OF_SIGNED_ARTIFACTS=${{ env.V1_CORRECT_NUM_OF_SIGNED_ARTIFACTS }} >> $GITHUB_ENV
+          echo STAGING_BRANCH=${{ env.V1_STAGING_BRANCH }} >> $GITHUB_ENV
 
       - name: '[Prep 4 - v2 only!] some v2 specific tasks'
         if: startsWith(github.event.inputs.zowe-artifact-dir, '2')
@@ -95,6 +99,7 @@ jobs:
           echo ZOWE_RELEASE_JSON=zowe-release-v2.json >> $GITHUB_ENV
           echo CORRECT_NUM_OF_RELEASE_ARTIFACTS=${{ env.V2_CORRECT_NUM_OF_RELEASE_ARTIFACTS }} >> $GITHUB_ENV
           echo CORRECT_NUM_OF_SIGNED_ARTIFACTS=${{ env.V2_CORRECT_NUM_OF_SIGNED_ARTIFACTS }} >> $GITHUB_ENV
+          echo STAGING_BRANCH=${{ env.V2_STAGING_BRANCH }} >> $GITHUB_ENV
 
       - name: '[Prep 5] Create various folders for later steps to use'
         run: |
@@ -342,7 +347,7 @@ jobs:
               repo: '${{ env.ZOWE_INSTALL_PACKAGING_REPO }}',
               title: 'Automatically Promote PTF for v${{ github.event.inputs.zowe-release-version }} after release by zowe robot',
               head: 'users/robot/promote-ptf-from-${{ github.run_number }}',
-              base: 'staging'
+              base: '${{ env.STAGING_BRANCH }}'
             });
             console.log(`The pull request is at: ${out.data.html_url}`);
             return out.data.number;
@@ -359,7 +364,7 @@ jobs:
               repo: '${{ env.ZOWE_INSTALL_PACKAGING_REPO }}',
               pull_number: ${{ steps.promote-ptf-6.outputs.result }},
               reviewers: [
-                'jackjia-ibm','FlappiTomic'
+                'jackjia-ibm','FlappiTomic','MarkAckert';
               ]
             });
 
