--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -364,7 +364,7 @@ jobs:
               repo: '${{ env.ZOWE_INSTALL_PACKAGING_REPO }}',
               pull_number: ${{ steps.promote-ptf-6.outputs.result }},
               reviewers: [
-                'jackjia-ibm','FlappiTomic','MarkAckert';
+                'jackjia-ibm','FlappiTomic','MarkAckert'
               ]
             });
 
