--- a/.github/workflows/app-server.yml
+++ b/.github/workflows/app-server.yml
@@ -30,6 +30,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: 'zlux workflow'
+        permissions: write-all
         uses: zowe-actions/zlux-builds/git-release@v2.x/main
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
