--- a/.github/workflows/app-server.yml
+++ b/.github/workflows/app-server.yml
@@ -33,7 +33,7 @@ jobs:
       - name: 'zlux workflow'
         uses: zowe-actions/zlux-builds/git-release@v2.x/main
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.ZOWE_ROBOT_TOKEN}}
           github-user: ${{ secrets.ZOWE_ROBOT_USER }}
           github-password: ${{ secrets.ZOWE_ROBOT_TOKEN }}
           github-email: ${{ secrets.ZOWE_ROBOT_EMAIL }}
