debug a new action
Signed-off-by: Tom Zhang <14881754+FlappiTomic@users.noreply.github.com>

Update play.yml

Signed-off-by: Tom Zhang <14881754+FlappiTomic@users.noreply.github.com>

debug enabling

Signed-off-by: Tom Zhang <14881754+FlappiTomic@users.noreply.github.com>

more debug

Signed-off-by: Tom Zhang <14881754+FlappiTomic@users.noreply.github.com>

more fixes

Signed-off-by: Tom Zhang <14881754+FlappiTomic@users.noreply.github.com>

more fixes2

Signed-off-by: Tom Zhang <14881754+FlappiTomic@users.noreply.github.com>

change to async to make log more concise

Signed-off-by: Tom Zhang <14881754+FlappiTomic@users.noreply.github.com>

aa

Signed-off-by: Tom Zhang <14881754+FlappiTomic@users.noreply.github.com>

azs

Signed-off-by: Tom Zhang <14881754+FlappiTomic@users.noreply.github.com>

we

Signed-off-by: Tom Zhang <14881754+FlappiTomic@users.noreply.github.com>

Update index.js

Signed-off-by: Tom Zhang <14881754+FlappiTomic@users.noreply.github.com>

w

Signed-off-by: Tom Zhang <14881754+FlappiTomic@users.noreply.github.com>

dff

Signed-off-by: Tom Zhang <14881754+FlappiTomic@users.noreply.github.com>

--- a/.github/workflows/play.yml
+++ b/.github/workflows/play.yml
@@ -6,6 +6,9 @@ jobs:
   playing:
     runs-on: ubuntu-latest
     steps:
+      - name: 'Checkout'
+        uses: actions/checkout@v2
+
       - name: Download manifest file
         run: curl https://raw.githubusercontent.com/${{ env.USER_REPO }}/${{ env.BRANCH_NAME }}/manifest.json.template -o manifest.json
         env:
