--- a/.github/workflows/nightly-v1.yml
+++ b/.github/workflows/nightly-v1.yml
@@ -52,11 +52,13 @@ jobs:
         uses: ./decide-if-to-run-build
         with:
           time-difference-threshold-min: 24
+      
+      - run: echo "::set-output name=RUN_BUILD::${{ env.RUN_BUILD }}"
 
   run-nightly-pipeline:
     runs-on: ubuntu-latest
     needs: if-to-run-build
-    if: ${{ env.RUN_BUILD == 'YES' }}
+    if: ${{ needs.job1.outputs.output1 == 'YES' }}
     steps:
       - name: 'Setup jFrog CLI'
         uses: jfrog/setup-jfrog-cli@v2
