--- a/.github/workflows/nightly-v1.yml
+++ b/.github/workflows/nightly-v1.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           DAYOFWEEK=$(date +"%a")
           if [[ "$DAYOFWEEK" == "${{ env.DAY_RUN_BLD_FULL_TEST }}" ]] ; then
-            echo RUN_BUILD="YES" >> $GITHUB_ENV
+            echo RUN_BUILD=YES >> $GITHUB_ENV
             echo INSTALL_TEST="Zowe Release Tests" >> $GITHUB_ENV
             echo "Today is $DAYOFWEEK, need to run build and full release test suite"
           else
@@ -58,7 +58,7 @@ jobs:
   run-nightly-pipeline:
     runs-on: ubuntu-latest
     needs: if-to-run-build
-    if: ${{ needs.if-to-run-build.outputs.RUN_BUILD == 'YES' }}
+    if: needs.if-to-run-build.outputs.RUN_BUILD == 'YES'
     steps:
       - name: 'Setup jFrog CLI'
         uses: jfrog/setup-jfrog-cli@v2
