--- a/.github/workflows/nightly-v1.yml
+++ b/.github/workflows/nightly-v1.yml
@@ -28,14 +28,15 @@ jobs:
         uses: actions/checkout@v2
 
       - name: 'Determine if today is the day we absolutely need to run build+test'
+        id: absolutely-need-to-run
         run: |
           DAYOFWEEK=$(date +"%a")
           if [[ "$DAYOFWEEK" == "${{ env.DAY_RUN_BLD_FULL_TEST }}" ]] ; then
             echo RUN_BUILD=YES >> $GITHUB_ENV
-            echo INSTALL_TEST="Zowe Release Tests" >> $GITHUB_ENV
+            echo "::set-output name=INSTALL_TEST::Zowe Release Tests"
             echo "Today is $DAYOFWEEK, need to run build and full release test suite"
           else
-            echo INSTALL_TEST="Zowe Nightly Tests" >> $GITHUB_ENV
+            echo "::set-output name=INSTALL_TEST::Zowe Nightly Tests"
             echo "Today is $DAYOFWEEK, do not need to run build and full release test suite"
           fi
 
@@ -52,15 +53,19 @@ jobs:
         uses: ./decide-if-to-run-build
         with:
           time-difference-threshold-min: 24
-      
-      - run: echo "::set-output name=RUN_BUILD::${{ env.RUN_BUILD }}"
+
+      - id: set-outputs
+        run: echo "::set-output name=RUN_BUILD::${{ env.RUN_BUILD }}"
+
+    outputs:
+      RUN_BUILD: ${{ steps.set-output.outputs.RUN_BUILD }}
+      INSTALL_TEST: ${{ steps.absolutely-need-to-run.outputs.INSTALL_TEST }}
 
   run-nightly-pipeline:
     runs-on: ubuntu-latest
     needs: if-to-run-build
-    #if: needs.if-to-run-build.outputs.RUN_BUILD == 'YES'
+    if: needs.if-to-run-build.outputs.RUN_BUILD == 'YES'
     steps:
-      - run: echo ${{ needs.if-to-run-build.outputs.RUN_BUILD }}
       - name: 'Setup jFrog CLI'
         uses: jfrog/setup-jfrog-cli@v2
         env:
@@ -178,7 +183,7 @@ jobs:
           workflow-filename: cicd-test.yml
           branch-name: v1.x/staging
           poll-frequency: 10
-          inputs-json-string: '{"install-test":"${{ env.INSTALL_TEST }}","custom-zowe-artifactory-pattern-or-build-number":"${{ steps.call-build.outputs.workflow-run-num }}"}'
+          inputs-json-string: '{"install-test":"${{ needs.if-to-run-build.outputs.INSTALL_TEST }}","custom-zowe-artifactory-pattern-or-build-number":"${{ steps.call-build.outputs.workflow-run-num }}"}'
         # env:
         #   DEBUG: zowe-actions:shared-actions:workflow-remote-call-wait
           
