--- a/.github/workflows/nightly-v1.yml
+++ b/.github/workflows/nightly-v1.yml
@@ -64,7 +64,7 @@ jobs:
   run-nightly-pipeline:
     runs-on: ubuntu-latest
     needs: if-to-run-build
-    if: needs.if-to-run-build.outputs.RUN_BUILD == 'YES'
+    if: ${{ needs.if-to-run-build.outputs.RUN_BUILD == 'YES' }}
     steps:
       - name: 'Setup jFrog CLI'
         uses: jfrog/setup-jfrog-cli@v2
