--- a/.github/workflows/nightly-v1.yml
+++ b/.github/workflows/nightly-v1.yml
@@ -19,6 +19,7 @@ on:
 env:
   LOCAL_RELEASE_FOLDER: .release
   DAY_RUN_BLD_FULL_TEST: Sun
+  FORCE_BUILD_TIME_THRESHOLD: 24
 
 jobs:
   if-to-run-build:
@@ -52,7 +53,7 @@ jobs:
         if: ${{ env.RUN_BUILD != 'YES' }}
         uses: ./decide-if-to-run-build
         with:
-          time-difference-threshold-min: 24
+          time-difference-threshold-min: ${{ env.FORCE_BUILD_TIME_THRESHOLD }}
 
       - id: set-outputs
         run: echo "::set-output name=RUN_BUILD::${{ env.RUN_BUILD }}"
@@ -313,6 +314,63 @@ jobs:
                   "text": {
                     "type": "mrkdwn",
                     "text": "${{ steps.message.outputs.slack-message || 'No artifacts getting promoted.' }}"
+                  }
+                }
+              ]
+            }
+
+  post-slack-if-dont-need-build:
+    runs-on: ubuntu-latest
+    needs: run-nightly-pipeline
+    if: ${{ needs.if-to-run-build.outputs.RUN_BUILD == 'NO' }}
+    steps:
+      - name: Prepare slack message body
+        run: | 
+          echo TODAYS_DATE=$(date +'%m/%d/%Y') >> $GITHUB_ENV
+
+          echo STAGING_VER=$(jfrog rt search \
+          --sort-by=created --sort-order=desc --limit=1 \
+          "libs-snapshot-local/org/zowe/*/zowe-1*pax" \
+          | jq -r ".[].path" \
+          | sed "s#libs-snapshot-local/org/zowe/##g" \
+          | cut -f1 -d"/" \
+          | cut -f1 -d"-") \
+          >> $GITHUB_ENV
+
+      - name: Send slack message
+        uses: slackapi/slack-github-action@v1.18.0
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+        with:
+          channel-id: ${{ secrets.ZOWE_BUILD_CHANNEL_ID }}
+          payload: |
+            {
+              "blocks": [
+                {
+                  "type": "header",
+                  "text": {
+                    "type": "plain_text",
+                    "text": "Zowe Nightly Pipeline Daily Report"
+                  }
+                },
+                {
+                  "type": "section",
+                  "fields": [
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Version:*\n ${{ env.STAGING_VER }}"
+                    },
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Date:*\n ${{ env.TODAYS_DATE }}"
+                    }
+                  ]
+                },
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "Across all projects in the Zowe orgnization, there is no new commits occured in the last ${{ env.FORCE_BUILD_TIME_THRESHOLD }} hours. Thus, we skip the build and test today"
                   }
                 }
               ]
