--- a/.github/workflows/release-v1.yml
+++ b/.github/workflows/release-v1.yml
@@ -1,14 +1,14 @@
-name: Zowe Release
+name: Zowe Release v1
 on:   
   workflow_dispatch:
     inputs:
       zowe-artifact-dir:
         description: 'ZOWE_ARTIFACT_DIR'
-        default: '@.@@.@-RC|SNAPSHOT'
+        default: '1.@@.@-RC|SNAPSHOT'
         required: true
       zowe-build-name:
         description: 'ZOWE_BUILD_NAME'
-        default: 'zowe-install-packaging/v@.x/rc|master'
+        default: 'zowe-install-packaging/v1.x/rc|master'
         required: true
       zowe-build-number:
         description: 'ZOWE_BUILD_NUMBER'
@@ -16,7 +16,7 @@ on:
         default: '@@@@'
       zowe-release-version:
         description: 'ZOWE_RELEASE_VERSION'
-        default: '@.@@.@|-RC@'
+        default: '1.@@.@|-RC@'
         required: true
       force-sign:
         type: boolean
@@ -32,13 +32,9 @@ on:
 env:
   ZOWE_INSTALL_PACKAGING_OWNER: zowe
   ZOWE_INSTALL_PACKAGING_REPO: zowe-install-packaging
-  V1_STAGING_BRANCH: v1.x/staging
-  V2_STAGING_BRANCH: v2.x/staging
-  STAGING_BRANCH: default
-  V1_CORRECT_NUM_OF_RELEASE_ARTIFACTS: 13
-  V1_CORRECT_NUM_OF_SIGNED_ARTIFACTS: 28
-  V2_CORRECT_NUM_OF_RELEASE_ARTIFACTS: 9
-  V2_CORRECT_NUM_OF_SIGNED_ARTIFACTS: 20
+  STAGING_BRANCH: v1.x/staging
+  CORRECT_NUM_OF_RELEASE_ARTIFACTS: 13
+  CORRECT_NUM_OF_SIGNED_ARTIFACTS: 28
   LOCAL_RELEASE_FOLDER: .release
   TAG_DIR: .tag
   ORIGINAL_STAGING_DIR: .original-zowe-install-packaging-staging
@@ -62,9 +58,34 @@ jobs:
             exit 1
           fi
 
-  promote-and-release:
+  input-check:
     runs-on: ubuntu-latest
     needs: check-permission
+    steps:
+      - name: Check input zowe-artifact-dir
+        if: ${{ !startsWith(github.event.inputs.zowe-artifact-dir, '1') }}
+        uses: actions/github-script@v6
+        with:
+          script: |
+              core.setFailed('Input zowe-artifact-dir is not corresponding to Zowe version 1')
+
+      - name: Check input zowe-build-name
+        if: ${{ !contains(github.event.inputs.zowe-build-name, 'zowe-install-packaging/v1.x') }}
+        uses: actions/github-script@v6
+        with:
+          script: |
+              core.setFailed('Input zowe-build-name is not corresponding to Zowe version 1')
+
+      - name: Check input zowe-release-version
+        if: ${{ !startsWith(github.event.inputs.zowe-release-version, '1') }}
+        uses: actions/github-script@v6
+        with:
+          script: |
+              core.setFailed('Input zowe-release-version is not corresponding to Zowe version 1')
+
+  promote-and-release:
+    runs-on: ubuntu-latest
+    needs: input-check
     steps:
       - name: '[Prep 1] Checkout'
         uses: actions/checkout@v2
@@ -77,29 +98,13 @@ jobs:
       - name: '[Prep 3] Replace JFROG_CLI_BUILD_NAME'
         run: echo JFROG_CLI_BUILD_NAME=${{ github.event.repository.name }}/${GITHUB_REF_NAME} >> $GITHUB_ENV
 
-      - name: '[Prep 4 - v1 only!] some v1 specific tasks'
-        if: startsWith(github.event.inputs.zowe-artifact-dir, '1')
+      - name: '[Prep 4] Process zowe-release-v1.json'
         run: |
           sed -e "s#{ZOWE_ARTIFACT_DIR}#${{ github.event.inputs.zowe-artifact-dir }}#g" \
             zowe-release-v1-template.json > zowe-release-v1.json
           echo "Current zowe-release-v1.json is:"
           cat zowe-release-v1.json
           echo ZOWE_RELEASE_JSON=zowe-release-v1.json >> $GITHUB_ENV
-          echo CORRECT_NUM_OF_RELEASE_ARTIFACTS=${{ env.V1_CORRECT_NUM_OF_RELEASE_ARTIFACTS }} >> $GITHUB_ENV
-          echo CORRECT_NUM_OF_SIGNED_ARTIFACTS=${{ env.V1_CORRECT_NUM_OF_SIGNED_ARTIFACTS }} >> $GITHUB_ENV
-          echo STAGING_BRANCH=${{ env.V1_STAGING_BRANCH }} >> $GITHUB_ENV
-
-      - name: '[Prep 4 - v2 only!] some v2 specific tasks'
-        if: startsWith(github.event.inputs.zowe-artifact-dir, '2')
-        run: |
-          sed -e "s#{ZOWE_ARTIFACT_DIR}#${{ github.event.inputs.zowe-artifact-dir }}#g" \
-            zowe-release-v2-template.json > zowe-release-v2.json
-          echo "Current zowe-release-v2.json is:"
-          cat zowe-release-v2.json
-          echo ZOWE_RELEASE_JSON=zowe-release-v2.json >> $GITHUB_ENV
-          echo CORRECT_NUM_OF_RELEASE_ARTIFACTS=${{ env.V2_CORRECT_NUM_OF_RELEASE_ARTIFACTS }} >> $GITHUB_ENV
-          echo CORRECT_NUM_OF_SIGNED_ARTIFACTS=${{ env.V2_CORRECT_NUM_OF_SIGNED_ARTIFACTS }} >> $GITHUB_ENV
-          echo STAGING_BRANCH=${{ env.V2_STAGING_BRANCH }} >> $GITHUB_ENV
 
       - name: '[Prep 5] Create various folders for later steps to use'
         run: |
@@ -109,15 +114,13 @@ jobs:
           mkdir ${{ env.ORIGINAL_STAGING_DIR }}
           mkdir ${{ env.PROMOTE_PTF_DIR }}
 
-      - name: '[Validate 1] Validate zowe artifacts'
+      - name: '[Validate 1] Validate v1 zowe artifacts'
         id: validate
         uses: ./validate
         with:
           build-name: ${{ github.event.inputs.zowe-build-name }}
           build-num: ${{ github.event.inputs.zowe-build-number }}
           release-version: ${{ github.event.inputs.zowe-release-version }}
-        env:
-          DEBUG: 'zowe-release:validate'
 
       # Above step 'Validate' will generate a file (name is stored in its outputs.PROMOTE_JSON_FILE_NAME_FULL)
       # file name is: promote-artifacts.json
@@ -257,39 +260,31 @@ jobs:
           git tag "v$zowe_release_version"
           git push origin "v$zowe_release_version"
 
-      - name: '[Promote PTF 1 - v1 only!] Parse v1 staging branch'
-        if: startsWith(github.event.inputs.zowe-artifact-dir, '1')
-        run: echo STAGING_BRANCH_NAME=v1.x/staging >> $GITHUB_ENV
-
-      - name: '[Promote PTF 1 - v2 only!] Parse v2 staging branch'
-        if: startsWith(github.event.inputs.zowe-artifact-dir, '2')
-        run: echo STAGING_BRANCH_NAME=v2.x/staging >> $GITHUB_ENV
-
-      - name: '[Promote PTF 3 - formal release only!] Clone staging branch'
+      - name: '[Promote PTF 1 - formal release only!] Clone staging branch'
         if: ${{ env.IS_FORMAL_RELEASE == 'true' && env.SMPE_PTF_PROMOTE_TAR_PATH != '' }}
         uses: actions/checkout@v2
         with:
           repository: ${{ env.ZOWE_INSTALL_PACKAGING_OWNER }}/${{ env.ZOWE_INSTALL_PACKAGING_REPO }}
-          ref: ${{ env.STAGING_BRANCH_NAME }}
+          ref: ${{ env.STAGING_BRANCH }}
           token: ${{ secrets.ZOWE_ROBOT_TOKEN }}
           path: ${{ env.ORIGINAL_STAGING_DIR }}
 
-      - name: '[Promote PTF 4 - formal release only!] Clone staging branch to a diff path to make new branch from it'
+      - name: '[Promote PTF 2 - formal release only!] Clone staging branch to a diff path to make new branch from it'
         if: ${{ env.IS_FORMAL_RELEASE == 'true' && env.SMPE_PTF_PROMOTE_TAR_PATH != '' }}
         uses: actions/checkout@v2
         with:
           repository: ${{ env.ZOWE_INSTALL_PACKAGING_OWNER }}/${{ env.ZOWE_INSTALL_PACKAGING_REPO }}
-          ref: ${{ env.STAGING_BRANCH_NAME }}
+          ref: ${{ env.STAGING_BRANCH }}
           token: ${{ secrets.ZOWE_ROBOT_TOKEN }}
           path: ${{ env.PROMOTE_PTF_DIR }}
 
-      - name: '[Promote PTF 5 - formal release only!] Create a new branch (git checkout -b)'
+      - name: '[Promote PTF 3 - formal release only!] Create a new branch (git checkout -b)'
         if: ${{ env.IS_FORMAL_RELEASE == 'true' && env.SMPE_PTF_PROMOTE_TAR_PATH != '' }}
         run: |
           cd ${{ env.PROMOTE_PTF_DIR }}
           git checkout -b "users/robot/promote-ptf-from-${{ github.run_number }}"
 
-      - name: '[Promote PTF 6 - formal release only!] Download smpe-promote.tar'
+      - name: '[Promote PTF 4 - formal release only!] Download smpe-promote.tar'
         if: ${{ env.IS_FORMAL_RELEASE == 'true' && env.SMPE_PTF_PROMOTE_TAR_PATH != '' }}
         uses: zowe-actions/shared-actions/jfrog-download@main
         with:
@@ -298,7 +293,7 @@ jobs:
           extra-options: --flat=true
           expected-count: 1
 
-      - name: '[Promote PTF 7 - formal release only!] Doing remaining work'
+      - name: '[Promote PTF 5 - formal release only!] Doing remaining work'
         if: ${{ env.IS_FORMAL_RELEASE == 'true' && env.SMPE_PTF_PROMOTE_TAR_PATH != '' }}
         run: |
           # at the beginning, we are at root project dir of zowe-release
@@ -334,7 +329,7 @@ jobs:
           # push before creating PR
           git push https://${{ secrets.ZOWE_ROBOT_USER }}:${{ secrets.ZOWE_ROBOT_TOKEN }}@github.com/${{ env.ZOWE_INSTALL_PACKAGING_OWNER }}/${{ env.ZOWE_INSTALL_PACKAGING_REPO }} "users/robot/promote-ptf-from-${{ github.run_number }}"
         
-      - name: '[Promote PTF 8 - formal release only!] Create a new Pull Request'
+      - name: '[Promote PTF 6 - formal release only!] Create a new Pull Request'
         uses: actions/github-script@v5
         if: ${{ env.IS_FORMAL_RELEASE == 'true' && env.SMPE_PTF_PROMOTE_TAR_PATH != '' }}
         id: promote-ptf-6
@@ -353,7 +348,7 @@ jobs:
             return out.data.number;
           result-encoding: string
 
-      - name: '[Promote PTF 9 - formal release only!] Add PR reviewers'
+      - name: '[Promote PTF 7 - formal release only!] Add PR reviewers'
         if: ${{ env.IS_FORMAL_RELEASE == 'true' && env.SMPE_PTF_PROMOTE_TAR_PATH != '' && steps.promote-ptf-6.outputs.result != '' }}
         uses: actions/github-script@v5
         with:
@@ -370,7 +365,7 @@ jobs:
 
       # only execute this in v1 release pipeline & formal release
       - name: Publish docker images - formal release only!
-        if: ${{ startsWith(github.event.inputs.zowe-artifact-dir, '1') && env.IS_FORMAL_RELEASE == 'true' }}
+        if: env.IS_FORMAL_RELEASE == 'true'
         timeout-minutes: 120
         run: |
           docker_s390x=$(cat ${{ steps.validate.outputs.PROMOTE_JSON_FILE_NAME_FULL }} | jq -r '."docker-s390x"')
